modified the TestWikipediaRevisionParser class